# dechord

./: .gitignore  AGENTS.md  README.md
backend/: Makefile  README.md  main.py  pyproject.toml
backend/app/: jobs.py  main.py  persistence.py  recognition.py  uploads.py
backend/benchmarks/: recognizer_compare.py
backend/tests/: _fakes.py  conftest.py  test_jobs.py  test_library.py  test_persistence.py  test_recognition.py  test_uploads.py
frontend/: README.md  next.config.ts  package.json  pnpm-lock.yaml
frontend/app/: page.tsx
frontend/app/media/[id]/: page.tsx
frontend/components/: chord-track.tsx  item-view.tsx  library-view.tsx  master-track.tsx  row-start-label.tsx  sheet-view.tsx  theme-provider.tsx  theme-toggle.tsx  timeline-axis.tsx
frontend/hooks/: use-css-var.ts  use-hotkey.ts  use-job-poller.ts
frontend/lib/: api.ts  audio-player.ts  chords.ts  keyboard.ts  layout.ts  peaks.ts  timeline.ts
ravel/docs/: design-v1.md  recognizer-benchmark.md  recognizer-tradeoffs.md
ravel/tasks/: T0001-bootstrap-backend.md  T0002-define-persistence-schema.md  T0003-implement-upload-endpoint.md  T0004-benchmark-madmom-recognizer-variants.md  T0005-implement-chord-recognition-service.md  T0006-implement-async-job-table.md  T0007-implement-library-read-endpoints.md  T0008-bootstrap-frontend.md  T0009-implement-library-list-view.md  T0010-implement-item-view-chord-track.md  T0011-implement-item-view-master-transport.md  T0012-gate-item-view-navigation-on-recognition-completion.md  T0012-wire-end-to-end-upload-polling-flow.md  T0013-put-chord-label-on-wider-split-segment.md  T0014-make-px-per-second-responsive.md  T0015-fix-doubled-border-between-chord-and-master-tracks.md  T0016-evaluate-audio-playback-library.md  T0017-compute-server-side-peaks.md  T0018-prefer-first-part-for-split-chord-label-when-it-fits.md  T0019-add-dark-light-theme-toggle-buttons.md  T0020-fix-ssr-crash-in-chord-label-measurement.md  T0021-improve-master-track-waveform-bar-styling.md  T0022-fix-item-view-horizontal-scroll-and-phone-landscape-width.md  T0023-fix-cursor-height-and-seek-while-paused.md  T0024-rename-itemview-to-sheetview.md  T0025-polish-sheet-view-cursor-master-midline-and-axis.md  T0026-fix-long-track-playback-pause-from-network-underrun.md
