[project]
name = "dechord"
version = "0.1.0"
description = "An audio tool that recognizes chord progression"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.139.0",
    "pydantic>=2.0",
    "madmom>=0.16.1",
]

# The last released madmom (0.16.1, 2018) is incompatible with Python 3.13:
# it uses `from collections import MutableSequence` (removed in 3.10) and
# `pkg_resources`. The unreleased main branch fixes both. Install from git
# until 0.17 is published.
[tool.uv.sources]
madmom = { git = "https://github.com/CPJKU/madmom.git" }

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pytest.ini_options]
# Let tests import the `app` package without installing the project.
pythonpath = ["."]
